Security: User should only modify resources where he's the author for/allowed. - Implemented for entities: friend, comment, reaction
